--- a/WebSudoku/Client/Shared/Cell.razor
+++ b/WebSudoku/Client/Shared/Cell.razor
@@ -1,4 +1,4 @@
-﻿<input role="status" class="text-center sudoku-input @AdditionalClass" type="@InputType" maxlength="1" min="1" max="9" readonly="@ReadOnly" value="@Value" @onchange="OnValueChanged"/>
+﻿<input role="status" class="text-center sudoku-input sudoku-input-var @AdditionalClass" type="@InputType" maxlength="1" min="1" max="9" readonly="@ReadOnly" value="@Value" @onchange="OnValueChanged"/>
 
 @code {
     [Parameter]
