--- a/WebSudoku/Client/Shared/Cell.razor
+++ b/WebSudoku/Client/Shared/Cell.razor
@@ -21,5 +21,5 @@
 
     protected string InputType => ReadOnly ? "text" : "number";
 
-    protected int Indent => ReadOnly && !IsMobileDevice ? 0 : 16;
+    protected int Indent => ReadOnly || IsMobileDevice ? 0 : 16;
 }
