Replace OptionOrder enum with inteface and classes.

--- a/WebSudoku/Client/Pages/Sudoku.razor
+++ b/WebSudoku/Client/Pages/Sudoku.razor
@@ -97,7 +97,7 @@ else
     protected void CreateNewBoard()
     {
         Board newBoard = new Board();
-        newBoard.Cells = Solver.Solve(newBoard.Cells, OptionOrder.Random);
+        newBoard.Cells = Solver.Solve(newBoard.Cells, new RandomOptionOrder<int>());
         for (int i = 0; i < 9; i++)
         {
             for (int j = 0; j < 9; j++)
