Update directory structure and namespaces of Shared project.

--- a/WebSudoku/Client/Pages/Sudoku.razor
+++ b/WebSudoku/Client/Pages/Sudoku.razor
@@ -1,6 +1,8 @@
 ﻿@page "/sudoku"
-@using WebSudoku.Shared
 @using System.Linq
+@using WebSudoku.Shared
+@using WebSudoku.Shared.General
+@using WebSudoku.Shared.Sudoku
 @inject Solver Solver
 @inject Blanker Blanker
 @inject Validator Validator
