Change Home to Sudoku Rules
Add Link to Home
Update PageTitles

--- a/WebSudoku/Client/Pages/Sudoku.razor
+++ b/WebSudoku/Client/Pages/Sudoku.razor
@@ -9,7 +9,7 @@
 @inject NavigationManager Navigation
 @inject IJSRuntime JS
 
-<PageTitle>Sudoku</PageTitle>
+<PageTitle>WebSudoku - sudoku</PageTitle>
 
 @if (board == null)
 {
