--- a/WebSudoku/Client/Shared/NavMenu.razor
+++ b/WebSudoku/Client/Shared/NavMenu.razor
@@ -16,7 +16,7 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/WebSudoku" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Sudoku Rules
+                <span class="oi oi-book" aria-hidden="true"></span> Sudoku Rules
             </NavLink>
         </div>
         <div class="nav-item px-3">
