Upgrade project to .NET 8.
Update/Cleanup dotnet.yml workflow.

Update NuGet package versions.

--- a/WebSudoku/Layout/MainLayout.razor
+++ b/WebSudoku/Layout/MainLayout.razor
@@ -1,4 +1,5 @@
-﻿@inherits LayoutComponentBase
+﻿@using WebSudoku.Shared
+@inherits LayoutComponentBase
 
 @inject NavigationManager Nav
 <CascadingValue Value=this>
