--- a/WebSudoku/Layout/NavMenu.razor
+++ b/WebSudoku/Layout/NavMenu.razor
@@ -15,7 +15,7 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="/WebSudoku/rules" Match="NavLinkMatch.All">
+            <NavLink class="nav-link" href="rules" Match="NavLinkMatch.All">
                 <span class="oi oi-book" aria-hidden="true"></span> Sudoku Rules
             </NavLink>
         </div>
