--- a/WebSudoku/_Imports.razor
+++ b/WebSudoku/_Imports.razor
@@ -6,5 +6,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using WebSudoku.Client
-@using WebSudoku.Client.Shared
+@using WebSudoku
+@using WebSudoku.Layout
