--- a/WebSudoku/Layout/MainLayout.razor.css
+++ b/WebSudoku/Layout/MainLayout.razor.css
@@ -75,3 +75,13 @@ main {
         padding-right: 1.5rem !important;
     }
 }
+
+@media print {
+    .sidebar{
+        display: none !important;
+    }
+
+    .top-row{
+        display: none !important;
+    }
+}
