--- a/WebSudoku/wwwroot/css/app.css
+++ b/WebSudoku/wwwroot/css/app.css
@@ -67,6 +67,20 @@ a, .btn-link {
 }
 
 @media all {
+    .div-main {
+        flex: 0 0 auto;
+        width: 74%;
+    }
+
+    .div-options {
+        flex: 0 0 auto;
+        width: 26%;
+    }
+
+    .flex-direction-var {
+        flex-direction: row;
+    }
+
     .sudoku-table {
         border: thin solid black;
         background-color: black;
@@ -95,6 +109,20 @@ a, .btn-link {
 }
 
 @media only screen and (orientation: portrait) {
+    .div-main {
+        flex: 0 0 auto;
+        width: 100%;
+    }
+
+    .div-options {
+        flex: 0 0 auto;
+        width: 100%;
+    }
+
+    .flex-direction-var {
+        flex-direction: column;
+    }
+
     .sudoku-table {
         border: thin solid black;
         background-color: black;
@@ -117,10 +145,24 @@ a, .btn-link {
 }
 
 @media (min-width: 768px) and (max-width: 1024px) {
+    .div-main {
+        flex: 0 0 auto;
+        width: 100%;
+    }
+
+    .div-options {
+        flex: 0 0 auto;
+        width: 100%;
+    }
+
+    .flex-direction-var {
+        flex-direction: column;
+    }
+
     .sudoku-table {
         border: thin solid black;
         background-color: black;
-        width: 90%;
+        width: 100%;
     }
 
     .sudoku-input-var {
@@ -136,7 +178,7 @@ a, .btn-link {
     .sudoku-table {
         border: thin solid black;
         background-color: black;
-        width: 80%;
+        width: 100%;
     }
 
     .sudoku-input-var {
@@ -149,10 +191,20 @@ a, .btn-link {
 }
 
 @media (min-width: 1212px) {
+    .div-main {
+        flex: 0 0 auto;
+        width: 67%;
+    }
+
+    .div-options {
+        flex: 0 0 auto;
+        width: 33%;
+    }
+
     .sudoku-table {
         border: thin solid black;
         background-color: black;
-        width: 65%;
+        width: 100%;
     }
 
     .sudoku-input-var {
@@ -165,10 +217,20 @@ a, .btn-link {
 }
 
 @media (min-width: 1500px) {
+    .div-main {
+        flex: 0 0 auto;
+        width: 50%;
+    }
+
+    .div-options {
+        flex: 0 0 auto;
+        width: 50%;
+    }
+
     .sudoku-table {
         border: thin solid black;
         background-color: black;
-        width: 50%;
+        width: 100%;
     }
 
     .sudoku-input-var {
@@ -244,4 +306,28 @@ a, .btn-link {
 
 code {
     color: #c02d76;
+}
+
+button.btn-purple {
+    color: white;
+    background-color: rgb(64, 64, 200);
+}
+
+button.btn-purple:hover {
+    color: white;
+    background-color: rgba(64, 64, 200, 0.75);
+}
+
+@media print {
+    button, button + span, button + span + span, input[type=checkbox], label {
+        display: none !important;
+    }
+
+    .hide-in-print {
+        display: none !important;
+    }
+
+    .div-main{
+        width: 100% !important;
+    }
 }
