Reorganize layout of Sudoku compnent.
Replace setting background-color with setting border for sudoku-table cells.

Add hide-in-print class to div.sidebar and div.top-row.

Simplify CSS.

Add KeyCodes class with values for arrow keys.

Add OnKeyDown EventCallback.

Add focus-sudoku-cell.js used for navigation with arrows.

--- a/WebSudoku/Layout/MainLayout.razor
+++ b/WebSudoku/Layout/MainLayout.razor
@@ -2,12 +2,12 @@
 @inherits LayoutComponentBase
 
 <div class="page">
-    <div class="sidebar">
+    <div class="sidebar hide-in-print">
         <NavMenu />
     </div>
 
     <main>
-        <div class="top-row px-4">
+        <div class="top-row px-4 hide-in-print">
             <a href="https://github.com/APB97/WebSudoku" target="_blank">Code</a>
         </div>
 
