--- a/WebSudoku/Shared/Cell.razor
+++ b/WebSudoku/Shared/Cell.razor
@@ -1,13 +1,15 @@
 ﻿@if (ReadOnly)
 {
-    <input class="text-center sudoku-input sudoku-input-var input-readonly" style="background-color: white; align-content: center" readonly="readonly" value="@Value" />
+    <input class="text-center sudoku-input sudoku-input-var input-readonly" style="background-color: white; align-content: center" readonly="readonly" value="@Value" 
+        @onkeydown="OnKeyDown" />
 }
 else
 {
     <InputText TValue="string" Value="@Value" ValueChanged="v => OnChange(new ChangeEventArgs { Value = v })" ValueExpression="() => Value"
         class="text-center sudoku-input sudoku-input-var input-editable"
         style="@(HighlightColor != null ? $"background-color: {HighlightColor}" : string.Empty)"
-        @onblur="() => OnChange(new ChangeEventArgs{ Value = Value })" />
+        @onblur="() => OnChange(new ChangeEventArgs{ Value = Value })"
+        @onkeydown="OnKeyDown" />
 }
 
 @code {
@@ -22,6 +24,9 @@ else
 
     [Parameter]
     public string Value { get; set; } = string.Empty;
+
+    [Parameter]
+    public EventCallback<KeyboardEventArgs> OnKeyDown { get; set; }
 
     private async Task OnChange(ChangeEventArgs args)
     {
